got salary working

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -14,7 +14,7 @@
 		<%= f.select :college, [['Columbia University in the City of New York','Columbia University in the City of New York']] %>
 
 		<%= f.label :major %>
-		<%= f.select :major, [['Computer Science','computer science'],['Art History','art history'],['Finance','finance']] %>
+		<%= f.select :major, [['Computer Science (CS)','Computer Science (CS)'],['Art History','art history'],['Finance','finance']] %>
 
 		<%= f.submit "Calculate my debt", class: "btn btn-large btn-primary" %>
 
