--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -4,17 +4,14 @@
 	<div class="span6 offset3">
 		<%= form_for(@student) do |f| %>
 
-		<%= f.label :scholarships %>
-		<%= f.text_field :scholarships %>
-
 		<%= f.label :contribution %>
 		<%= f.text_field :contribution %>
 
 		<%= f.label :college %>
-		<%= f.text_field :college %>
+		<%= f.autocomplete_field :college, autocomplete_price_college_students_path %>
 
 		<%= f.label :major %>
-		<%= f.select :major, [['Computer Science (CS)','Computer Science (CS)'],['Art History','art history'],['Finance','finance']] %>
+		<%= f.autocomplete_field :major, autocomplete_salary_major_students_path %>
 
 		<%= f.submit "Calculate my debt", class: "btn btn-large btn-primary" %>
 
